src/mobile.css
@media only screen and (max-width: 620px) {
  body {
    margin: 8px 12px;
  }
  html {
    margin: 0;
    overflow-x: hidden;
  }

  .title-bar {
    font-size: 40px;
    letter-spacing: -2px;
  }

  h1 {
    font-size: 40px;
    letter-spacing: -2px;
  }

  h1.included {
      margin-bottom: 20px;
  }

  .part-grid .part {
    width: 33%;
    height: 33%;
  }

  .part-grid .part svg {
    width: 100%;
    height: 100%;
  }

  .token-info-container {
    width: 100%;
    margin: 0;
  }
  .token-info-container svg {
    width: 100%;
    height: 100%;
  }

  .parts-container {
    width: 100%;
    flex-shrink: 0;
  }

  /*  RECONFIGURATOR */

  .reconfigurator , .reconfigurator .section{
    flex-direction: column;
  }

  .reconfigurator .reconfigurator-preview , .reconfigurator .reconfigurator-preview svg {
    width: calc(100vw - 32px) !important;
    height: calc(100vw - 32px) !important;
  }

  .reconfigurator .parts {
    flex-direction: row;
    margin: 32px 0;
  }

  .reconfigurator .parts svg {
    width: calc((100vw - 32px) / 6) !important;
    height: calc((100vw - 32px) / 6) !important;
}

  .reconfigurator .swap-buttons {
    flex-direction: row;
  }

  .submit-swap-button {
    width: calc(100vw - 32px);
  }

  /* GRAIL BUILDER */

  .grail-builder {
    flex-direction: column;
  }

  .grail-builder__preview {
    position: sticky;
    top: 0;
    padding: 10px;
    border-bottom: 1px solid black;
    background: white;
  }

  .grail-builder__tokens {
    overflow: hidden;
  }

  .grail-builder__parts {
    overflow-x: auto;
  }

  .grail-builder__placeholder-image {
    height: 25vh;
    min-height: 200px;
    width: 100%;
  }
}

